--- a/Circa/style.css
+++ b/Circa/style.css
@@ -76,4 +76,11 @@ p {
     position: absolute;
     top: 20px; /* Adjust as needed */
     left: 20px; /* Adjust as needed */
+
+    /* background: #BA8C63; */
+    /* border: 6px outset #BA8C63; */
+    }
+
+    a{
+        text-decoration: none;
     }
