--- a/Connect4/style.css
+++ b/Connect4/style.css
@@ -12,7 +12,8 @@ a{
 
 #board {
     background-color: blue;
-    border: 10px solid navy;
+    border: 10px ridge navy;
+
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
@@ -35,7 +36,7 @@ a{
 
 
 
-  /* My Additions */
+  /* Back-Button Style */
 
   #back-btn{
     position: absolute;
