--- a/games/Guess/style.css
+++ b/games/Guess/style.css
@@ -7,6 +7,10 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
+    background-image: url(../Guess/Classroom2.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 
 
@@ -21,6 +25,13 @@ body {
     border-radius: 10px;
     background-color: #fff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+
+    background-color: #f4e1d1;
+    /* background-color: #BA8C63; */
+    border: 6px outset #95704F;
+    border-radius: 10% / 10%;
+
+    opacity:0.96;
 }
 
 #wordBox, #timer {
@@ -39,8 +50,6 @@ body {
 #card {
     display: none;
 }
-
-
 
 
 
