--- a/games/GoodleJump/style.css
+++ b/games/GoodleJump/style.css
@@ -64,3 +64,28 @@ left: 30px; /* Adjust as needed */
 font-size: 46px;
 }
 
+
+/* Welcome Screen */
+
+#welcomeScreen {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 26px;
+
+  z-index: 100;
+}
+#welcomeScreen h1 {
+  font-size: 80px;
+}
+
+.characterOption {
+  cursor: pointer;
+  margin: 20px;
+}
+
+#welcomeScreen img{
+  width: 12vw;
+}
