--- a/games/GoodleJumpIOS/style.css
+++ b/games/GoodleJumpIOS/style.css
@@ -68,24 +68,26 @@ font-size: 46px;
 
 #welcomeScreen {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  /* transform: translate(-50%, -50%); */
   text-align: center;
-  font-size: 26px;
-
+  font-size: 36px;
+  
   z-index: 100;
-}
-#welcomeScreen h1 {
-  font-size: 80px;
-}
-
-.characterOption {
+  }
+  #welcomeScreen h1 {
+  font-size: 100px;
+  }
+  
+  .characterOption {
   cursor: pointer;
   margin: 20px;
-}
-
-#welcomeScreen img{
-  width: 12vw;
-}
-
+  }
+  
+  #welcomeScreen img{
+  width: 14vw;
+  }
+  
+  
