--- a/games/Guess/style.css
+++ b/games/Guess/style.css
@@ -60,6 +60,7 @@ body {
     position: absolute;
     top: 20px; /* Adjust as needed */
     left: 20px; /* Adjust as needed */
+    z-index:10;
     }
 
   a{
